@@ -421,6 +421,7 @@ tabprevi
 tabprevio
 tabpreviou
 tabprevious
+cds
 
 " "hi" should be highlighted as :command and its argument as highlight group
 hi CurrLine
